--- a/gleam.toml
+++ b/gleam.toml
@@ -1,16 +1,7 @@
-name = "test_gleam_sse"
+name = "realtime_chat"
 version = "1.0.0"
-
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
-#
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
+gleam = ">= 0.32.0"
+dev-dependencies = { gleescript = ">= 1.4.0 and < 2.0.0"}
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
@@ -18,6 +9,4 @@ mist = ">= 1.2.0 and < 2.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
 gleam_otp = ">= 0.10.0 and < 1.0.0"
-
-[dev-dependencies]
-gleeunit = ">= 1.0.0 and < 2.0.0"
+simplifile = ">= 2.0.1 and < 3.0.0"
