--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: "26.0.2"
-          gleam-version: "1.2.1"
-          rebar3-version: "3"
-          # elixir-version: "1.15.4"
+          otp-version: '26.0.2'
+          gleam-version: '1.2.1'
+          rebar3-version: '3'
       - run: gleam deps download
-      - run: gleam test
-      - run: gleam format --check src test
+      - run: gleam run -m gleescript
